# advent_of_code

./: .rubocop.yml  Cargo.toml  Pipfile  README.md  Rakefile  go.mod  refactoring_notes.md
1/: part1.py
2016/: .rubocop.yml  Gemfile
2016/spec/: day1_spec.rb  day3_spec.rb  day5b_spec.rb  day6_spec.rb
2018/: Pipfile
2018/1/: part2.py
2018/2/: part1.py  part2.py
2018/4/: main.py
2018/5/: main.py
2018/6/: main.py  test_display.txt
2018/7/: main.py  test_main.py
2019/: Makefile  Pipfile  mypy.ini  run.sh
2019/common/: test_util.py  util.py
2019/day1/: main.py  test_main.py
2019/day2/: main.py  test_main.py
2019/day3/: main.py  test_main.py
2020/common/: util.go
2020/day2/: main_test.go
2020/day3/: main.go  main_test.go
2020/day4/: passport.go  passport_test.go
2020/day5/: zone_test.go
2020/day6/: main.go  questionaire.go  questionaire_test.go
2020/day7/: bag.go  main.go  main_test.go
2020/day8/: machine_test.go  main_test.go
2020/skel/: main.go
2023/: pyproject.toml
2024/: Cargo.toml  README.md
2024/src/: lib.rs
23/: main.py
3/: main.py  test_main.py
4/: test_main.py
5/: test_main.py
6/: test_main.py
8/: main.py  test_main.py
9/: main.py  orig.py  test_input.csv
common/: util.go
day1/: main.go  main_test.go
day2/: main.go
day3/: main.go  main_test.go
day4/: main.go  main_test.go
day5/: main.go  main_test.go  zone.go  zone_test.go
day6/: main_test.go
day7/: bag_test.go
day8/: machine.go  main.go
skel/: main.go  main_test.go
spec/: day2_spec.rb  day4_spec.rb  day5_spec.rb  day7_spec.rb
(+14 files in other folders)
