[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Nick Pegg <nick@nickpegg.com>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
